--- a/blog/moderation/tsconfig.json
+++ b/blog/moderation/tsconfig.json
@@ -17,7 +17,7 @@
     "strictFunctionTypes": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
@@ -28,10 +28,9 @@
     "baseUrl": "."
   },
   "exclude": [
-    "node_modules"
+    "./node_modules"
   ],
   "include": [
-    "./src/**/*.tsx",
-    "./src/**/*.ts"
+    "./*.ts"
   ]
 }
