--- a/blog/event-bus/package.json
+++ b/blog/event-bus/package.json
@@ -4,13 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.ts"
+    "start": "nodemon dist/index.js",
+    "build": "tsc"
   },
   "dependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.9",
     "axios": "^0.21.1",
     "express": "^4.17.1",
+    "nodemon": "^2.0.6",
     "typescript": "^4.1.3"
   }
 }
