--- a/blog/moderation/package.json
+++ b/blog/moderation/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.ts"
+    "start": "nodemon dist/index.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
