--- a/blog/posts/package.json
+++ b/blog/posts/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.ts"
+    "start": "nodemon dist/index.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "axios": "^0.21.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "nodemon": "^2.0.6",
     "typescript": "^4.1.3"
   }
 }
