--- a/blog/query/package.json
+++ b/blog/query/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.ts"
+    "start": "nodemon dist/index.js",
+    "build": "tsc"
   },
   "dependencies": {
     "@types/body-parser": "^1.19.0",
