--- a/blog/moderation/package.json
+++ b/blog/moderation/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.9",
     "axios": "^0.21.1",
     "express": "^4.17.1",
+    "nodemon": "^2.0.6",
     "typescript": "^4.1.3"
   }
 }
