--- a/ticketing/auth/tsconfig.json
+++ b/ticketing/auth/tsconfig.json
@@ -16,8 +16,8 @@
     "strictNullChecks": false,
     "strictFunctionTypes": true,
     "noImplicitThis": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
