--- a/ticketing/client/package.json
+++ b/ticketing/client/package.json
@@ -7,6 +7,7 @@
     "dev": "next"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "next": "^10.0.4",
     "react": "^17.0.1",
