finished orders kubernetes logic

--- a/ticketing/infra/k8s/tickets-depl.yaml
+++ b/ticketing/infra/k8s/tickets-depl.yaml
@@ -18,7 +18,7 @@ spec:
           env:
             - name: NATS_URL
               value: 'http://nats-srv:4222'
-            - name: NATUS_CLUSTER_ID
+            - name: NATS_CLUSTER_ID
               value: ticketing
             - name: MONGO_URI
               value: 'mongodb://tickets-mongo-srv:27017/tickets'
