--- a/ticketing/infra/k8s/auth-depl.yaml
+++ b/ticketing/infra/k8s/auth-depl.yaml
@@ -19,7 +19,10 @@ spec:
             - name: MONGO_URI
               value: 'mongodb://auth-mongo-srv:27017/auth'
             - name: JWT_KEY
-              value: 'dowamwdomadawo'
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
 ---
 apiVersion: v1
 kind: Service
