--- a/ticketing/infra/k8s/orders-depl.yaml
+++ b/ticketing/infra/k8s/orders-depl.yaml
@@ -24,7 +24,9 @@ spec:
               value: 'mongodb://orders-mongo-srv:27017/orders'
             - name: JWT_KEY
               valueFrom:
-              value: 'dowamwdomadawo'
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
 ---
 apiVersion: v1
 kind: Service
