--- a/ticketing/infra/k8s/payments-depl.yaml
+++ b/ticketing/infra/k8s/payments-depl.yaml
@@ -27,6 +27,11 @@ spec:
                 secretKeyRef:
                   name: jwt-secret
                   key: JWT_KEY
+            - name: STRIPE_KEY
+              valueFrom:
+                secreyKeyRef:
+                  name: stripe-secret
+                  key: STRIPE_KEY
 ---
 apiVersion: v1
 kind: Service
